05-Metal&Traefik/08-Cldzone/02-Cldzone-Stack-Ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudtechakademi
spec:
  selector:
    matchLabels:
      app: cloudtechakademi
  replicas: 2
  template:
    metadata:
      labels:
        app: cloudtechakademi
    spec:
      containers:
      - name: cloudtech-konteyneri
        image: techakademi/cldzone:2
---
apiVersion: v1
kind: Service
metadata:
  name: cloudzone-servisi
  labels:
    app: cloudtechakademi
spec:
  type: LoadBalancer
  selector:
    app: cloudtechakademi
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudzone-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: www.cloudtechakademi.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cloudzone-servisi
            port:
              number: 80
